automation and workflow gui in place
